[package]
name = "portforwarder"
version = "0.1.0"
authors = ["Thomas Kühnel <kuehnelth@gmail.com>"]
edition = "2018"

[dependencies]
mio = { git = "https://github.com/tokio-rs/mio" }
multi-map = "1.2.0"
getopts= "0.2"
simple-logging = "2.0.2"
iovec = "0.1.2"

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.7"
features = ["wincon"]

[dependencies.cursive]
version = "0.12"
default-features = false
features = ["pancurses-backend"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
