[package]
name = "portforwarder"
version = "0.1.0"
authors = ["Thomas Kühnel <kuehnelth@gmail.com>"]
edition = "2018"

[dependencies]
multi-map = "1.2.0"
getopts= "0.2"
simple-logging = "2.0.2"

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = ["wincon"]

[target.'cfg(windows)'.dependencies]
wepoll-binding = "^1.0"

[dependencies.cursive]
version = "0.13"
default-features = false
features = ["pancurses-backend"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
